<resources>
    <string name="app_name">NUSRET</string>
    <string name="background">background</string>
    <string name="logo">logo</string>
    <string name="login">تسجيل الدخول</string>
    <string name="login_hint">قم بتسجيل الدخول باستخدام رقم الجوال</string>
    <string name="full_name">الاسم بالكامل</string>
    <string name="enter_phone">ادخل رقم الجوال</string>
    <string name="terms">الشروط والاحكام</string>
    <string name="send_verification">ارسل رقم التحقق</string>
    <string name="verify">تأكيد</string>
    <string name="verify_hint">قم بإدخال رمز التحقق المرسل إلى رقم الجوال الخاص بك</string>
    <string name="enter_verification_code">ادخل رمز التحقق</string>
    <string name="resend_verification">اعادة ارسال رمز التحقق ؟</string>
    <string name="complete_registration_hint">قم بإدخال بيانات حسابك</string>
    <string name="mail">البريد الالكتروني</string>
    <string name="complete_registration">أكمل عملية التسجيل</string>
    <string name="congratulation">مبروووووك !!</string>
    <string name="registration_success">تمت عملية التسجيل بنجاح</string>
    <string name="you_can_shop">الآن يمكنك التسوق بكل حرية</string>
    <string name="enter_menu">الدخول للقائمة</string>
    <string name="shopping_cart">سلة المشتريات</string>
    <string name="title_activity_main">الرئيسية</string>
    <string name="title_home">الرئيسية</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slider_image">Slider Image</string>
    <string name="category_name">اسم التصنيف</string>
    <string name="add_to_cart">أضف للسلة</string>
    <string name="checkout">اتمام الشراء</string>
    <string name="save">حفظ</string>
    <string name="total">المجموع</string>
    <string name="reyal">ريال</string>
    <string name="_800">0</string>
    <string name="client_info">معلومات العميل</string>
    <string name="phone">رقم الجوال</string>
    <string name="address">العنوان</string>
    <string name="country">الدولة</string>
    <string name="city">المدينة</string>
    <string name="town">الحي</string>
    <string name="choose_method">طريقة التقطيع</string>
    <string name="pay_way">طريقة الدفع</string>
    <string name="pay_on_receive">دفع عند الاستلام</string>
    <string name="_321548">#321548</string>
    <string name="_reyal">ريال -</string>
    <string name="_2">2</string>
    <string name="item">منتج</string>
    <string name="closed">مغلق</string>
    <string name="_12_10_2017">12/10/2017</string>
    <string name="_10_30">10:30</string>
    <string name="time">الوقت</string>
    <string name="amount">المبلغ</string>
    <string name="product_amount">الكمية</string>
    <string name="sum">المجموع</string>
    <string name="reyal2">ريال</string>
    <string name="content_description">تفاصيل الصورة</string>
    <string name="details">Details</string>
    <string name="product_details">details about product</string>
    <string name="product_name">اسم المنتج</string>
    <string name="product_name_">اسم المنتج</string>
    <string name="reyal_kilo">ريال/كيلو</string>
    <string name="discount_30">خصم 30%</string>
    <string name="register_hint">قم بالتسجيل باستخدام رقم الجوال الخاص بك</string>
    <string name="register">مستخدم جديد</string>
    <string name="error_sending_code">خطأ في ارسال رمز التحقق</string>
    <string name="error_try_again">خطأ .. الرجاء المحاولة مرة اخرى</string>
    <string name="code_verification">تأكيد رمز التحقق</string>
    <string name="new_user">مستخدم جديد</string>
    <string name="complete_profile">أكمل بيانات حسابك</string>
    <string name="about_application">عن التطبيق</string>
    <string name="application_instruction">طريقة عمل التطبيق</string>
    <string name="rate_the_application">قم بتقييم التطبيق</string>
    <string name="follow_us">تابعنا على الشبكات الاجتماعية</string>
    <string name="call_us">تحدث معنا :</string>
    <string name="notes">الملاحظات والاقتراحات</string>
    <string name="contact_us">راسلنا :</string>
    <string name="contact_us_title">تواصل معنا</string>
    <string name="login_title">تسجيل الدخول</string>
    <string name="my_order_title">طلباتي</string>
    <string name="cart_title">سلة المشتريات</string>
    <string name="open">مفتوح</string>
    <string name="close">مغلق</string>
    <string name="verification_sent_again">تم ارسال رمز التحقق</string>
    <string name="order_details_title">تفاصيل الطلب</string>
    <string name="profile_title">حسابي</string>
    <string name="enter_phone_and_name">ادخل الاسم ورقم الجوال</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="successfully_added_to_cart">تمت الاضافة للسلة بنجاح</string>
    <string name="profile_updated_successfully">تم تحديث الملف الشخصي بنجاح</string>
    <string name="app_instruction">طريقة عمل التطبيق</string>
    <string name="about_app">عن التطبيق</string>
    <string name="_">-</string>
    <string name="receive_way">طريقة الاستلام</string>
    <string name="delivery_way">توصيل بالسيارة</string>
    <string name="fill_all_fields">الرجاء تعبئة جميع الحقول</string>
    <string name="_20">20%</string>
    <string name="_50">خصم 50 ريال</string>
</resources>
