<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:elevation="4dp"
    android:minHeight="?attr/actionBarSize"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <com.example.rezeq.nusret.views.CustomTextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/toolbar_logo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:contentDescription="@string/content_description"
        android:src="@drawable/logo"
        android:visibility="gone" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/shopping_cart"
            android:src="@drawable/cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/count_circle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/shopping_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/count_circle" />

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:textColor="@color/colorRed"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/count_circle"
            app:layout_constraintEnd_toEndOf="@+id/count_circle"
            app:layout_constraintStart_toStartOf="@+id/count_circle"
            app:layout_constraintTop_toTopOf="@+id/count_circle" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.Toolbar>