<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rezeq.nusret.fragments.ProfileFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.rezeq.nusret.views.CustomEditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/edit_text_background"
                android:gravity="center"
                android:hint="@string/full_name"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.rezeq.nusret.views.CustomEditText
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:gravity="center"
                android:hint="@string/phone"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <com.example.rezeq.nusret.views.CustomEditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:gravity="center"
                android:hint="@string/mail"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/phone"
                app:layout_constraintStart_toStartOf="@+id/phone"
                app:layout_constraintTop_toBottomOf="@+id/phone" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <com.example.rezeq.nusret.views.CustomButton
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/button_background_filled"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorRed"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:progressTint="@color/colorRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
